--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #f4f1ea;
+    background-color: rgba(244, 241, 234, 1);
     box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.15);
     position: fixed;
     top:0;
@@ -11,6 +11,7 @@
     box-sizing: border-box;
     padding: 0 2rem;
     height: 4rem;
+    z-index: 1;
 }
 
 .nav-bar-container>a {
