--- a/react-app/src/components/ReviewSummary/ReviewSummary.css
+++ b/react-app/src/components/ReviewSummary/ReviewSummary.css
@@ -4,7 +4,7 @@
 }
 
 .review-display {
-    padding-left: 20rem;
+    /* padding-left: 20rem; */
     box-sizing: border-box;
     width: 100%;
 }
