--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -13,6 +13,12 @@ body {
     overflow-wrap: break-word;
 }
 
+#root {
+    max-width: 1025px;
+    width: fit-content;
+    margin: auto;
+}
+
 h1 {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.75rem;
